tests/snapshots/parser_error_fixtures/eof_after_lambda_params.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/eof_after_lambda_params.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Lambda Arrow

I was expecting `->` after the lambda parameters, but I found the end of the file.

  examples/parser_errors/eof_after_lambda_params.flx:2:19
  |
2 |     let f = /(x, y)
  |                   ^
  |                   - this lambda parameter list ends here

Note:
  while parsing function `main` > lambda expression

Help:
  Use `/x -> expr` or `/(x, y) -> expr`.
== stdout ==
<not executed>
